# Desktop-Brightness

./: .gitignore  .pre-commit-config.yaml  README.md  example.py  main.py  requirements.txt
myproject/: pyproject.toml
