[tool.poetry]
name = "myproject"
version = "0.1.0"
description = ""
authors = ["Zephyrus <zephyrus1175@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
configparser = "6.0.0"
screen-brightness-control = "0.22.0"
ttkbootstrap = "1.10.1"
pillow = "10.2.0"
pystray = "0.19.5"
pre-commit = "^4.0.1"
mypy = "^1.13.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.4"

[tool.ruff]
select = ["I", "F", "S"]  # Apply isort, Flake8, Bandit rules
docstring-code-format = true
docstring-code-line-length = 80

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
